# RenderDocTools

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  AndroidSupportLinux.md  BUILD_FIXES.md  BUILD_GUIDE.md  CONTRIBUTE.md  CONTRIBUTING.md  Directory.Build.targets  HOW_SETUP_WORKS.md  INSTALL_PYTHON36.md  PYTHON_VERSIONS.md  QUICK_REFERENCE.md  README.md  WORKFLOW_GUIDE.md  batch_process.py  diagnose.py  example_usage.py  install.py  pyproject.toml  quest_analysis.py  quick_setup.py  rdc-tools.bat  rdc-tools.ps1  rdc-tools.sh  requirements-dev.txt  requirements.txt  setup.ps1  setup.py  setup.sh  setup_all.py  setup_check.py  setup_meta_quest.py  setup_venv.ps1  test_import.py  test_renderdoc.py
renderdoc_tools/: __init__.py  parser.py
renderdoc_tools/analyzers/: __init__.py  base.py
renderdoc_tools/analyzers/quest/: __init__.py  foveation.py  multiview.py  performance.py  report.py
renderdoc_tools/cli/: __init__.py  entry_point.py  main.py
renderdoc_tools/cli/commands/: __init__.py  parse.py  workflow.py
renderdoc_tools/config/: __init__.py  settings.py
renderdoc_tools/core/: __init__.py  capture.py  capture_info.py  exceptions.py  models.py
renderdoc_tools/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py
renderdoc_tools/extractors/: __init__.py  actions.py  base.py  counters.py  pipeline.py  resources.py  shaders.py
renderdoc_tools/tests/: README.md  __init__.py  test_exporters.py  test_extractors.py  test_models.py
renderdoc_tools/utils/: __init__.py  logging_config.py  renderdoc_detector.py  renderdoc_loader.py
renderdoc_tools/workflows/: __init__.py  base.py  presets.py  runner.py
scripts/: build.py  detect_python.py  retarget.py
